css/portfolio.css
header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height:60px;
    background-color: white;
    box-shadow: 0px 3px 10px gray;
    z-index: 1;
}

/* Style the navigation buttons in the header */
header a {
    font-size: 15px;
    text-align: center;
    text-transform: uppercase;
    font-family: century gothic;
    text-decoration: none;
    color: black;
    opacity: 0.5;
  }

header a:hover {
    opacity: 1;
}


#logo {
  position: absolute;
  left: 50%;
          transform: translate(-50%);
      -ms-transform: translate(-50%);
  -webkit-transform: translate(-50%);
  height:40px;
  margin-top: 10px;
}


.topnav {
    list-style-type: none;   
    margin-top: 20px;
    padding: 0;
}

#left_nav {
  position: absolute;
  float: left;
  left: 10%;

}

#right_nav {
  position: absolute;
  right: 10%;
  float: right;

}

#Home {
  margin-right: 75px;
}

#Portfolio {
  margin-left: 75px;

}

#About {
  margin-right: 75px;

}

#Contact {
  margin-left: 75px;
}

/* Float the list items side by side */
.topnav li {
    float: left;
}

/*MOBILE FRIENDLY MENU*/
#menu-button 
{
  display: none;
}

.my-menu
{
  text-align: center;
}

.my-menu ul
{
  margin-top: 15px;
  display: inline-block;
  margin-left: 0;
  margin-right: 0;
  padding: 0;

}

.my-menu li
{
  text-align: left;
  list-style-type: none; 
  padding: 5px;
}


.my-menu li a
{
  text-decoration: none;
  font-family: century gothic;
  color: black;
}

@media screen and (max-width:950px) 
{
  .topnav 
  {
    display: none;
  }

  #menu-button 
  {
    display: inline-block;
    position: absolute;
    right: 4%;
    top: 19px;
    color: black;
    text-decoration: none;
    cursor: pointer;
  }
}
/*MOBILE FRIENDLY MENU*/


/* force scrollbar */
html { overflow-y: scroll; }

/* ---- grid ---- */

.grid {
  margin-top: 60px;
  left: 1.1%;
  max-width: 99%;
}

/* clear fix */
.grid:after {
  content: '';
  display: block;
  clear: both;
}

/* ---- .grid-item ---- */

.grid-item {
  width: 49%;
}

.grid-item {
  float: left;
}

.grid-item img {
  display: block;
  max-width: 100%;
}

@media screen and (max-width:450px) 
{
  .grid-item
  {
    width: 100%;
  }
}

